# shift-scheduling

./: .gitignore  .pre-commit-config.yaml  README.md  default_input.json  pyproject.toml  shift_scheduling.py  test_input.json
.github/workflows/: flake8.yml  pytest.yml
benchmark/: run_benchmark.py
benchmark/input/: 04.168.663.json  08.336.1335.json  12.504.2007.json  16.672.2679.json  20.840.3351.json  24.1008.4023.json  28.1176.4695.json  32.1344.5367.json  36.1512.6039.json  40.1680.6711.json  44.1848.7383.json  48.2022.8079.json  52.2184.8727.json
demo_cases/: 10k-edges-1k-nodes.json  15k-edges-1k-nodes-sc.json  days_off.json  introduction.json  sc-introduction-fair.json
docs/: conf.py  index.rst
fgc/: fuzzy_graph_coloring-0.1.0-py3-none-any.whl
schema/: input_schema.json
tests/: test_shift_scheduling.py
