[tool.poetry]
name = "shift-scheduling"
version = "0.1.0"
description = ""
authors = [
    "Ferdinand Koenig",
    "Jonas Rheiner"
]
[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.4.0"
networkx = "^2.6.3"
numpy = "^1.22.2"
fuzzy-graph-coloring = "^0.1.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
